--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vote for Your Favorite Movie Genre</title>
+    <!-- Link to the CSS file in the static folder -->
     <link rel="stylesheet" href="/static/css/styles.css">
 </head>
 <body>
